<?xml version="1.0"?>
<package>
  <name>ccny_rgbd_tools</name>
  <version>0.0.0</version>
  <description>The ccny_rgbd_tools meta package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="achuwilson@gmail.com">achu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ccny_rgbd_tools</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>ccny_openni_launch</run_depend>
  <run_depend>ccny_rgbd</run_depend>
  <run_depend>ccny_rgbd_data</run_Depend>
  <run_depend>lib_rgbdtools</run_depend>


  <run_depend>ros</run_depend>
  <run_depend>ros_comm</run_depend>
  <run_depend>perception_pcl</run_depend>
  <run_depend>common_msgs</run_depend>
  <run_depend>geometry</run_depend>
  <run_depend>vision_opencv</run_depend>
  <run_depend>image_common</run_depend>
  <run_depend>nodelet_core<run_depend>

  <build_depend>ros</build_depend>
  <build_depend>ros_comm</build_depend>
  <build_depend>perception_pcl</build_depend>
  <build_depend>common_msgs</build_depend>
  <build_depend>geometry</build_depend>
  <build_depend>vision_opencv</build_depend>
  <build_depend>image_common</build_depend>
  <build_depend>nodelet_core<build_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
     <metapackage/> 

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
